# photo-assistant-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  inspector.mcp.json  main.py  pyproject.toml
agents/: orchestrator.py  sub_asset_manager.py  sub_creative_studio.py
api/: chats.py  gallery.py  routes_chat.py  routes_gallery.py
core/: config.py  mcp_server.py  security.py
database/: checkpointer.py  surreal_client.py
tools/: generative_tools.py  metadata_tools.py  vision_tools.py
utils/: entity_detector.py  geolocation_parser.py  google_drive.py  init_helper.py  logger.py  metadata_extractor.py  metrics.py  vector_generator.py
workflows/: activities.py  workflows.py
