[project]
name = "photo-assistant-backend"
version = "0.1.0"
description = "Photography Assistant AI Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langchain-google-genai>=1.0.6",
    "langgraph>=0.0.65",
    "surrealdb>=0.3.1",
    "python-multipart>=0.0.9",
    "mcp>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "database", "agents", "tools", "utils", "workflows"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
